# dutrack-rs

./: .env  .gitignore  Cargo.toml  ci.yml  circle.yml  package.json
ci/: pipeline.yml
ci/tasks/: bundle_assets.yml  bundle_release.yml  copy_images.yml  es6_to_js.yml  prepare_docker_build.yml  rust_app.yml  sass_to_css.yml
docker/: Dockerfile  setup.sh
dutrack-lib/: Cargo.toml
dutrack-lib/src/: key.rs  lib.rs  log.rs  util.rs
dutrack-lib/src/db/: mod.rs  models.rs
dutrack-lib/src/session/: mod.rs
dutrack-lib/src/stamp/: mod.rs
dutrack-lib/src/user/: mod.rs
lib/: Cargo.toml
lib/src/: lib.rs  util.rs
lib/src/db/: mod.rs  models.rs
lib/src/stamp/: mod.rs
lib/src/user/: mod.rs
lib/src/workday/: mod.rs
migrations/20170318084846_create_users/: up.sql
migrations/20170319141829_create_stamps/: down.sql  up.sql
migrations/20170326112554_create_workdays/: up.sql
src/: .main.rs.swp  context.rs  main.rs
src/assets/css/: base.sass  error.sass  login.sass  setup.sass  variables.sass  workday.sass
src/assets/js/: ajax.es6  navbar.es6  setup.es6  workday.es6
src/form_models/: user.rs
src/lib/: key.rs  mod.rs
src/lib/session/: mod.rs
src/lib/user/: mod.rs
src/routes/: mod.rs
src/routes/api/: fence.rs  mod.rs  stamps.rs  workday.rs
src/routes/assets/: mod.rs
src/routes/setup/: mod.rs
src/routes/user/: login.rs  mod.rs  register.rs  registration.rs
src/user/: mod.rs
templates/: index.hbs
templates/error/: 404.hbs  500.hbs  generic.hbs
templates/partials/: footer.hbs  header.hbs  navbar.hbs
templates/setup/: index.hbs
(+10 files in other folders)
