[package]
name = "dutrack-rs"
version = "0.1.0"
authors = ["Jan Christophersen <jan@ruken.pw>"]

[dependencies]
rocket = "0.2.2"
rocket_codegen = "0.2.2"
redis = "0.5.3"

[dependencies.uuid]
version = "0.4"
default-features = false
features = ["v4"]

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]
