[package]
name = "dutrack-rs"
version = "0.1.0"
authors = ["Jan Christophersen <jan@ruken.pw>"]

[dependencies]
rocket = "0.2.2"
rocket_codegen = "0.2.2"
redis = "0.5.3"
dotenv = "0.8.0"
diesel = { version = "0.12.0", features = ["postgres", "uuid"] }
diesel_codegen = { version = "0.12.0", features = ["postgres"] }

[dependencies.dutrack-lib]
path = "dutrack-lib"

[dependencies.uuid]
version = "0.4"
default-features = false
features = ["v4"]

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]
