[package]
name = "dutrack-lib"
version = "0.1.0"
authors = ["Jan Christophersen <jan@ruken.pw>"]

[dependencies]
slog = "1.5.0"
slog-term = "1.5.0"
rocket = "0.2.2"
redis = "0.5.3"
diesel = { version = "0.12.0", features = ["postgres", "uuid"] }
diesel_codegen = { version = "0.12.0", features = ["postgres"] }
dotenv = "0.8.0"
lazy_static = "0.2"
bcrypt = "0.1"

[dependencies.uuid]
version = "0.4"
default-features = false
features = ["v4"]